syntax = "proto3";

package teleporter;

option go_package = "github.com/Juneo-io/juneogo/proto/pb/teleporter";

service Signer {
  rpc Sign(SignRequest) returns (SignResponse);
}

message SignRequest {
  bytes source_chain_id = 1;
  bytes destination_chain_id = 2;
  bytes payload = 3;
}

message SignResponse {
  bytes signature = 1;
}
